# ME700_Assignment1_P1

./: .coverage  Assignment1_P1_genAIuse.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: elastic.py  newton.py
src/elastic/: elastic.py
src/newton/: newton.py
tests/: test.py  test_elastic.py  test_newton.py
tutorial/: class_tutorial1.py  class_tutorial2.py  newton_tutorial1.py  newton_tutorial2.py  newton_tutorial3.py  newton_tutorial_mech_1.py  newton_tutorial_mech_2.py  stress_test.py  stress_trial.py  stress_tutorial1.py  stress_tutorial2.py  stress_tutorial3.py  stress_tutorial_1.py  stress_tutorial_2.py  stress_tutorial_mech_1.py  stress_tutorial_mech_2.py  tutorial2.py  tutorial3.py  tutorial_mech_1.py  tutorial_mech_2.py
