[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newton"
version = "0.0.0"
authors = [
  { name="Jacob Garrett", email="jpg2002@bu.edu" },
]
description = "newton workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "sympy==1.13.3",
    "matplotlib==3.5.1"
]
